Set fonts; fonts styles.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-<<<<<<< HEAD
-    
-=======
     <nav>
         <img src="assets/icons/Menuburger.svg" alt="site menu">
     </nav>
@@ -23,17 +23,22 @@
         </section>
 
         <section class="section-two">
-            <span>Biography</span>
+            <span class="sub-title">Biography</span>
             <img src="assets/img/section-two/jared-weiss-P3cB0ynqYBw-unsplash 1.jpg" alt="jared weiss image">
             <div class="section-two__text">
                 <h2>Katya Mills</h2>
-                <p>Art Director Scenography / Styling / Creative Photography / Design</p>
+                <ul>
+                    <li>Art Director Scenography</li>
+                    <li>Styling</li>
+                    <li>Creative Photography</li>
+                    <li>Design</li>
+                </ul>
                 <p>“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
             </div>
         </section>
 
         <section class="section-three">
-            <span>Designers</span>
+            <span class="sub-title">Designers</span>
 
             <div class="section-three__item">
                 <img src="assets/img/section-three/spurwing-agency-r6LceZ3ckpM-unsplash 1.jpg" alt="image">
@@ -58,7 +63,7 @@
         </section>
 
         <section class="section-four">
-            <span>Testimonials</span>
+            <span class="sub-title">Testimonials</span>
             <div>
                 <div>
                     <div>
@@ -83,7 +88,7 @@
         </section>
 
         <section class="section-five">
-            <span>Strong points</span>
+            <span class="sub-title">Strong points</span>
             <img src="assets/img/section-five/dawid-liberadzki-vPFbVB7DPZI-unsplash 1.jpg" alt="image">
             <img src="assets/img/section-five/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
             <div>
@@ -106,6 +111,5 @@
             <img src="assets/img/section-five/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
         </section>
     </main>
->>>>>>> semantics
 </body>
 </html>
