--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
         <section class="hero-section">
-            <div class="section-section__wrapper">
+            <div class="hero-section__wrapper">
                 <div class="hero-section__title">
                     <h1>Mod Studio</h1>
                     <h2>Modern Web Studio</h2>
