Set biography section styles.

--- a/index.html
+++ b/index.html
@@ -22,22 +22,26 @@
                     <h1>Mod Studio</h1>
                     <h2>Modern Web Studio</h2>
                 </div>
-                <img class="hero-section__img" src="assets/img/hero-section/inside-weather-Uxqlfigh6oE-unsplash 1.jpg" alt="mod studio image">
+                <div class="hero-section__img"></div>
             </div>
         </section>
 
-        <section class="section-two">
-            <span class="sub-title">Biography</span>
-            <img src="assets/img/section-two/jared-weiss-P3cB0ynqYBw-unsplash 1.jpg" alt="jared weiss image">
-            <div class="section-two__text">
-                <h2>Katya Mills</h2>
-                <ul>
-                    <li>Art Director Scenography</li>
-                    <li>Styling</li>
-                    <li>Creative Photography</li>
-                    <li>Design</li>
-                </ul>
-                <p>“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
+        <section class="biography-section">
+            <div class="biography-section__wrapper">
+                <div class="biography-section__img">
+                    <div class="sub-title">Biography</div>
+                </div>
+                <div class="biography-section__text">
+                    <h2>Katya<br/>Mills</h2>
+                    <ul>
+                        <li>Art Director</li><br/>
+                        <li>Scenography</li>
+                        <li>Styling</li>
+                        <li>Creative Photography</li>
+                        <li>Design</li>
+                    </ul>
+                    <p>“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
+                </div>
             </div>
         </section>
 
