Added fixes from 8/05.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -16,31 +18,30 @@
         </button>
     </nav>
     <main>
-        <section class="hero-section">
-            <div class="hero-section__wrapper">
-                <div class="hero-section__title">
-                    <h1>Mod Studio</h1>
-                    <h2>Modern Web Studio</h2>
+        <section class="hero">
+            <div class="hero__wrapper">
+                <div class="hero__title">
+                    <h1 class="hero__title-main">Mod Studio</h1>
+                    <h2 class="hero__title-sub">Modern Web Studio</h2>
                 </div>
-                <div class="hero-section__img"></div>
+                <div class="hero__img"></div>
             </div>
         </section>
 
-        <section class="biography-section">
-            <div class="biography-section__wrapper">
-                <div class="biography-section__img">
-                    <div class="sub-title">Biography</div>
-                </div>
-                <div class="biography-section__text">
-                    <h2>Katya<br/>Mills</h2>
-                    <ul>
-                        <li>Art Director</li><br/>
-                        <li>Scenography</li>
-                        <li>Styling</li>
-                        <li>Creative Photography</li>
-                        <li>Design</li>
+        <section class="biography">
+            <div class="biography__wrapper">
+                <img class="biography__img" src="/assets/img/jared-weiss-P3cB0ynqYBw-unsplash 1.jpg" alt="katya mills photo" />
+                <h2 class="biography__title">Biography</h2>
+                <div class="biography__text">
+                    <h3 class="biography__text-title">Katya<br/>Mills</h3>
+                    <ul class="biography__text-list">
+                        <li class="biography__text-list_item">Art Director</li><br/>
+                        <li class="biography__text-list_item">Scenography</li>
+                        <li class="biography__text-list_item">Styling</li>
+                        <li class="biography__text-list_item">Creative Photography</li>
+                        <li class="biography__text-list_item">Design</li>
                     </ul>
-                    <p>“The more I deal with the work as something that is my own,  as something that is personal, the more successful it is.”</p>
+                    <p class="biography__text-paragraph">“The more I deal with the work as something that is my own, as something that is personal, the more successful it is.”</p>
                 </div>
             </div>
         </section>
@@ -49,21 +50,21 @@
             <span class="sub-title">Designers</span>
 
             <div class="section-three__item">
-                <img src="assets/img/section-three/spurwing-agency-r6LceZ3ckpM-unsplash 1.jpg" alt="image">
+                <img src="assets/img/spurwing-agency-r6LceZ3ckpM-unsplash 1.jpg" alt="image">
                 <h3>Jess Wonder</h3>
                 <div><strong>From/</strong>&nbsp;Be more flower</div>
                 <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
             </div>
 
             <div class="section-three__item">
-                <img src="assets/img/section-three/stil-P1jQzyvqfns-unsplash 1.jpg" alt="image">
+                <img src="assets/img/stil-P1jQzyvqfns-unsplash 1.jpg" alt="image">
                 <h3>Kameron Clein</h3>
                 <div><strong>From/</strong>&nbsp;Be more flower</div>
                 <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
             </div>
 
             <div class="section-three__item">
-                <img src="assets/img/section-three/stil-_mvSe9q8_n4-unsplash 1.jpg" alt="image">
+                <img src="assets/img/stil-_mvSe9q8_n4-unsplash 1.jpg" alt="image">
                 <h3>LOUISSE RED</h3>
                 <div><strong>From/</strong>&nbsp;Be more flower</div>
                 <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
@@ -87,18 +88,18 @@
                         <div>www.whitepapers.com</div>
                     </div>
                 </div>
-                <img src="assets/img/section-four/keghan-crossland-ZZxmc66SjfM-unsplash 1.jpg" alt="image">
+                <img src="assets/img/keghan-crossland-ZZxmc66SjfM-unsplash 1.jpg" alt="image">
             </div>
             <div>
                 <p>I just really want to do good work and work with some great people, people who challenge me.</p>
-                <img src="assets/img/section-four/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="image">
+                <img src="assets/img/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="image">
             </div>
         </section>
 
         <section class="section-five">
             <span class="sub-title">Strong points</span>
-            <img src="assets/img/section-five/dawid-liberadzki-vPFbVB7DPZI-unsplash 1.jpg" alt="image">
-            <img src="assets/img/section-five/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
+            <img src="assets/img/dawid-liberadzki-vPFbVB7DPZI-unsplash 1.jpg" alt="image">
+            <img src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
             <div>
                 <h2>Strengths</h2>
                 <ul>
@@ -116,7 +117,7 @@
                     <li>Creativity</li>
                 </ul>
             </div>
-            <img src="assets/img/section-five/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
+            <img src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
         </section>
     </main>
 </body>
