--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </section>
 
-        <section class="section-three">
+        <section class="designers">
             <span class="sub-title">Designers</span>
 
             <div class="section-three__item">
@@ -71,28 +71,28 @@
             </div>
         </section>
 
-        <section class="section-four">
-            <span class="sub-title">Testimonials</span>
-            <div>
-                <div>
-                    <div>
-                        <strong>Creativity</strong>
-                        <div>www.whitepapers.com</div>
-                    </div>
-                    <div>
-                        <strong>Creativity</strong>
-                        <div>www.whitepapers.com</div>
-                    </div>
-                    <div>
-                        <strong>Website</strong>
-                        <div>www.whitepapers.com</div>
-                    </div>
-                </div>
-                <img src="assets/img/keghan-crossland-ZZxmc66SjfM-unsplash 1.jpg" alt="image">
+        <section class="testimonials">
+            <h2 class="testimonials__title">Testimonials</h2>
+
+            <!-- <div class="testimonials__link-wrapper"></div> -->
+            <div class="testimonials__link">
+                <strong>Creativity</strong>
+                <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
             </div>
-            <div>
-                <p>I just really want to do good work and work with some great people, people who challenge me.</p>
-                <img src="assets/img/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="image">
+            <div class="testimonials__link">
+                <strong>Creativity</strong>
+                <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
+            </div>
+            <div class="testimonials__link">
+                <strong>Website</strong>
+                <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
+            </div>
+
+            <img class="testimonials__img" src="assets/img/keghan-crossland-ZZxmc66SjfM-unsplash 1.jpg" alt="testimonials image 1">
+
+            <div class="testimonials__paragraph">
+                <p class="testimonials__paragraph-text">I just really want to do good work and work with some great people, people who challenge me.</p>
+                <img src="assets/img/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="testimonials image 2">
             </div>
         </section>
 
