Added styles for designers-section.

--- a/index.html
+++ b/index.html
@@ -47,27 +47,35 @@
         </section>
 
         <section class="designers">
-            <span class="sub-title">Designers</span>
+            <div class="designers__wrapper">
+                <h2 class="designers__title">Designers</h2>
 
-            <div class="section-three__item">
-                <img src="assets/img/spurwing-agency-r6LceZ3ckpM-unsplash 1.jpg" alt="image">
-                <h3>Jess Wonder</h3>
-                <div><strong>From/</strong>&nbsp;Be more flower</div>
-                <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
-            </div>
+                <div class="designers__card designers__card-main">
+                    <img class="designers__card-photo" src="assets/img/spurwing-agency-r6LceZ3ckpM-unsplash 1.jpg" alt="image">
+                    <div class="designers__card-description">
+                        <h3 class="designers__card-title">Jess Wonder</h3>
+                        <div><strong>From/</strong>&nbsp;Be more flower</div>
+                        <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
+                    </div>
+                </div>
 
-            <div class="section-three__item">
-                <img src="assets/img/stil-P1jQzyvqfns-unsplash 1.jpg" alt="image">
-                <h3>Kameron Clein</h3>
-                <div><strong>From/</strong>&nbsp;Be more flower</div>
-                <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
-            </div>
+                <div class="designers__card">
+                    <img class="designers__card-photo" src="assets/img/stil-P1jQzyvqfns-unsplash 1.jpg" alt="image">
+                    <div class="designers__card-description">
+                        <h3 class="designers__card-title">Kameron Clein</h3>
+                        <div><strong>From/</strong>&nbsp;Be more flower</div>
+                        <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
+                    </div>
+                </div>
 
-            <div class="section-three__item">
-                <img src="assets/img/stil-_mvSe9q8_n4-unsplash 1.jpg" alt="image">
-                <h3>LOUISSE RED</h3>
-                <div><strong>From/</strong>&nbsp;Be more flower</div>
-                <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
+                <div class="designers__card">
+                    <img class="designers__card-photo" src="assets/img/stil-_mvSe9q8_n4-unsplash 1.jpg" alt="image">
+                    <div class="designers__card-description">
+                        <h3 class="designers__card-title">Louisse Red</h3>
+                        <div><strong>From/</strong>&nbsp;Be more flower</div>
+                        <div><strong>Skills/</strong>&nbsp;Design Strategy / Marketing</div>
+                    </div>
+                </div>
             </div>
         </section>
 
