Added styles for strong-points-section.

--- a/index.html
+++ b/index.html
@@ -104,28 +104,30 @@
             </div>
         </section>
 
-        <section class="section-five">
-            <span class="sub-title">Strong points</span>
-            <img src="assets/img/dawid-liberadzki-vPFbVB7DPZI-unsplash 1.jpg" alt="image">
-            <img src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
-            <div>
-                <h2>Strengths</h2>
-                <ul>
-                    <li>Interiors</li>
-                    <li>Outdoors</li>
-                    <li>Portraits</li>
-                    <li>Styling</li>
-                    <li>Events</li>
-                    <li>Architecture</li>
-                    <li>Design</li>
-                    <li>Celebrations</li>
-                    <li>Artistic</li>
-                    <li>Fashion</li>
-                    <li>Nature</li>
-                    <li>Creativity</li>
+        <section class="strong-points">
+            <h2 class="strong-points__title">Strong points</h2>
+
+            <img class="strong-points__img" src="assets/img/dawid-liberadzki-vPFbVB7DPZI-unsplash 1.jpg" alt="image">
+            <img class="strong-points__img" src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
+
+            <div class="strong-points__list-wrapper">
+                <h3 class="strong-points__list-title">Strengths</h3>
+                <ul class="strong-points__list">
+                    <li class="strong-points__list-item">Interiors</li>
+                    <li class="strong-points__list-item">Outdoors</li>
+                    <li class="strong-points__list-item">Portraits</li>
+                    <li class="strong-points__list-item">Styling</li>
+                    <li class="strong-points__list-item">Events</li>
+                    <li class="strong-points__list-item">Architecture</li>
+                    <li class="strong-points__list-item">Design</li>
+                    <li class="strong-points__list-item">Celebrations</li>
+                    <li class="strong-points__list-item">Artistic</li>
+                    <li class="strong-points__list-item">Fashion</li>
+                    <li class="strong-points__list-item">Nature</li>
+                    <li class="strong-points__list-item">Creativity</li>
                 </ul>
             </div>
-            <img src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
+            <img class="strong-points__img" src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
         </section>
     </main>
 </body>
