Media queries - Biography section.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
 
         <section class="biography">
             <div class="biography__wrapper">
-                <img class="biography__img" src="/assets/img/jared-weiss-P3cB0ynqYBw-unsplash 1.jpg" alt="katya mills photo" />
+                <!-- <picture class="biography__img">
+                    <source media="(max-width:450px)" srcset="/assets/img/katya_mills_full_450.jpg">
+                    <img src="/assets/img/katya_mills_full.jpg" alt="katya mills photo" style="width: inherit;"/>
+                </picture> -->
+                <img class="biography__img" src="/assets/img/katya_mills_full.jpg" alt="katya mills photo" />
                 <h2 class="biography__title">Biography</h2>
                 <div class="biography__text">
-                    <h3 class="biography__text-title">Katya<br/>Mills</h3>
+                    <h3 class="biography__text-title">Katya <br/>Mills</h3>
                     <ul class="biography__text-list">
                         <li class="biography__text-list_item">Art Director</li><br/>
                         <li class="biography__text-list_item">Scenography</li>
