--- a/index.html
+++ b/index.html
@@ -83,10 +83,9 @@
             </div>
         </section>
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
             <h2 class="testimonials__title">Testimonials</h2>
 
-            <!-- <div class="testimonials__link-wrapper"></div> -->
             <div class="testimonials__link">
                 <strong>Creativity</strong>
                 <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
@@ -106,7 +105,7 @@
                 <p class="testimonials__paragraph-text">I just really want to do good work and work with some great people, people who challenge me.</p>
                 <img src="assets/img/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="testimonials image 2">
             </div>
-        </section>
+        </section> -->
 
         <section class="strong-points">
             <h2 class="strong-points__title">Strong points</h2>
