Media queries - Testimonials section.

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
             </div>
         </section>
 
-        <!-- <section class="testimonials">
+        <section class="testimonials">
             <h2 class="testimonials__title">Testimonials</h2>
 
             <div class="testimonials__link">
-                <strong>Creativity</strong>
-                <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
-            </div>
-            <div class="testimonials__link">
-                <strong>Creativity</strong>
-                <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
-            </div>
-            <div class="testimonials__link">
                 <strong>Website</strong>
+                <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
+            </div>
+            <div class="testimonials__link">
+                <strong>Creativity</strong>
+                <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
+            </div>
+            <div class="testimonials__link">
+                <strong>Creativity</strong>
                 <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
             </div>
 
@@ -103,9 +103,9 @@
 
             <div class="testimonials__paragraph">
                 <p class="testimonials__paragraph-text">I just really want to do good work and work with some great people, people who challenge me.</p>
-                <img src="assets/img/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="testimonials image 2">
+                <img class="testimonials__paragraph-img" src="assets/img/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="testimonials image 2">
             </div>
-        </section> -->
+        </section>
 
         <section class="strong-points">
             <h2 class="strong-points__title">Strong points</h2>
