Created Bottom Nav.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <button class="nav__menu-btn" type="menu">
             <img src="assets/icons/Menuburger.svg" alt="site menu">
         </button>
+
+        <div class="nav__list">
+            <a href="#biography">b</a>
+            <a href="#designers">d</a>
+            <a href="#testimonials">t</a>
+            <a href="#strongPoints">s</a>
+        </div>
     </nav>
     <main>
         <section class="hero">
@@ -28,7 +35,7 @@
             </div>
         </section>
 
-        <section class="biography">
+        <section id="biography" class="biography">
             <div class="biography__wrapper">
                 <!-- <picture class="biography__img">
                     <source media="(max-width:450px)" srcset="/assets/img/katya_mills_full_450.jpg">
@@ -50,7 +57,7 @@
             </div>
         </section>
 
-        <section class="designers">
+        <section id="designers" class="designers">
             <div class="designers__wrapper">
                 <h2 class="designers__title">Designers</h2>
 
@@ -83,7 +90,7 @@
             </div>
         </section>
 
-        <section class="testimonials">
+        <section id="testimonials" class="testimonials">
             <h2 class="testimonials__title">Testimonials</h2>
 
             <div class="testimonials__link">
@@ -107,7 +114,7 @@
             </div>
         </section>
 
-        <section class="strong-points">
+        <section id="strongPoints" class="strong-points">
             <h2 class="strong-points__title">Strong points</h2>
 
             <img class="strong-points__img" src="assets/img/dawid-liberadzki-vPFbVB7DPZI-unsplash 1.jpg" alt="image">
