--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
         <section id="biography" class="biography">
             <div class="biography__wrapper">
-                <!-- <picture class="biography__img">
-                    <source media="(max-width:450px)" srcset="/assets/img/katya_mills_full_450.jpg">
-                    <img src="/assets/img/katya_mills_full.jpg" alt="katya mills photo" style="width: inherit;"/>
-                </picture> -->
-                <img class="biography__img" src="/assets/img/katya_mills_full.jpg" alt="katya mills photo" />
+                <picture class="biography__img">
+                    <source media="(max-width:550px)" srcset="/assets/img/katya_mills_full_450.jpg">
+                    <img src="/assets/img/katya_mills_full.jpg" alt="katya mills photo" style="width: 100%;"/>
+                </picture>
+
                 <h2 class="biography__title">Biography</h2>
                 <div class="biography__text">
                     <h3 class="biography__text-title">Katya <br/>Mills</h3>
@@ -110,7 +110,10 @@
 
             <div class="testimonials__paragraph">
                 <p class="testimonials__paragraph-text">I just really want to do good work and work with some great people, people who challenge me.</p>
-                <img class="testimonials__paragraph-img" src="assets/img/sinitta-leunen-YaReHIzNdRw-unsplash 1.jpg" alt="testimonials image 2">
+                <picture class="testimonials__paragraph-img">
+                    <source media="(max-width:550px)" srcset="/assets/img/sinitta-leunen-450.jpg">
+                    <img src="assets/img/sinitta-leunen-full.jpg" alt="testimonials image 2" style="width: 100%;">
+                </picture>
             </div>
         </section>
 
