--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav>
-        <button class="nav__menu-btn" type="menu">
+        <button class="nav__menu-btn" type="button">
             <img src="assets/icons/Menuburger.svg" alt="site menu">
         </button>
 
@@ -39,14 +39,14 @@
             <div class="biography__wrapper">
                 <picture class="biography__img">
                     <source media="(max-width:550px)" srcset="/assets/img/katya_mills_full_450.jpg">
-                    <img src="/assets/img/katya_mills_full.jpg" alt="katya mills photo" style="width: 100%;"/>
+                    <img src="/assets/img/katya_mills_full.jpg" alt="katya mills photo" style="width: 100%;">
                 </picture>
 
                 <h2 class="biography__title">Biography</h2>
                 <div class="biography__text">
-                    <h3 class="biography__text-title">Katya <br/>Mills</h3>
+                    <h3 class="biography__text-title">Katya <br>Mills</h3>
                     <ul class="biography__text-list">
-                        <li class="biography__text-list_item">Art Director</li><br/>
+                        <li class="biography__text-list_item">Art Director<br></li>
                         <li class="biography__text-list_item">Scenography</li>
                         <li class="biography__text-list_item">Styling</li>
                         <li class="biography__text-list_item">Creative Photography</li>
@@ -62,7 +62,7 @@
                 <h2 class="designers__title">Designers</h2>
 
                 <div class="designers__card designers__card-main">
-                    <img class="designers__card-photo" src="assets/img/spurwing-agency-r6LceZ3ckpM-unsplash 1.jpg" alt="image">
+                    <img class="designers__card-photo" src="assets/img/spurwing-agency.jpg" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Jess Wonder</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="designers__card">
-                    <img class="designers__card-photo" src="assets/img/stil-P1jQzyvqfns-unsplash 1.jpg" alt="image">
+                    <img class="designers__card-photo" src="assets/img/stil.jpg" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Kameron Clein</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="designers__card">
-                    <img class="designers__card-photo" src="assets/img/stil-_mvSe9q8_n4-unsplash 1.jpg" alt="image">
+                    <img class="designers__card-photo" src="assets/img/stil2.jpg" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Louisse Red</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -106,7 +106,7 @@
                 <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
             </div>
 
-            <img class="testimonials__img" src="assets/img/keghan-crossland-ZZxmc66SjfM-unsplash 1.jpg" alt="testimonials image 1">
+            <img class="testimonials__img" src="assets/img/keghan-crossland.jpg" alt="testimonials image 1">
 
             <div class="testimonials__paragraph">
                 <p class="testimonials__paragraph-text">I just really want to do good work and work with some great people, people who challenge me.</p>
@@ -120,8 +120,8 @@
         <section id="strongPoints" class="strong-points">
             <h2 class="strong-points__title">Strong points</h2>
 
-            <img class="strong-points__img" src="assets/img/dawid-liberadzki-vPFbVB7DPZI-unsplash 1.jpg" alt="image">
-            <img class="strong-points__img" src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
+            <img class="strong-points__img" src="assets/img/dawid-liberadzki.jpg" alt="image">
+            <img class="strong-points__img" src="assets/img/avery-klein.jpg" alt="image">
 
             <div class="strong-points__list-wrapper">
                 <h3 class="strong-points__list-title">Strengths</h3>
@@ -140,7 +140,7 @@
                     <li class="strong-points__list-item">Creativity</li>
                 </ul>
             </div>
-            <img class="strong-points__img" src="assets/img/avery-klein-JaXs8Tk5Iww-unsplash 1.jpg" alt="image">
+            <img class="strong-points__img" src="assets/img/avery-klein.jpg" alt="image">
         </section>
     </main>
 </body>
