--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
@@ -25,13 +26,13 @@
         </div>
     </nav>
     <main>
-        <section class="hero">
-            <div class="hero__wrapper">
-                <div class="hero__title-wrapper">
-                    <h1 class="hero__title hero__title_big title_big">Mod Studio</h1>
+        <section class="hero container-lg">
+            <div class="hero__wrapper row position-relative">
+                <div class="hero__title-wrapper col-12 col-sm-6 text-center bg-white">
+                    <h1 class="hero__title hero__title_big title_big mb-3">Mod Studio</h1>
                     <h2 class="hero__title_small title_small">Modern Web Studio</h2>
                 </div>
-                <div class="hero__img"></div>
+                <div class="hero__img col-12"></div>
             </div>
         </section>
 
