Set Tailwind into the hero section.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <nav>
@@ -25,13 +26,59 @@
         </div>
     </nav>
     <main>
-        <section class="hero">
-            <div class="hero__wrapper">
-                <div class="hero__title-wrapper">
-                    <h1 class="hero__title hero__title_big title_big">Mod Studio</h1>
-                    <h2 class="hero__title_small title_small">Modern Web Studio</h2>
+        <section class="
+            w-full
+            min-w-[calc(320px + 36px)]
+            mb-20
+            sm:mb-36
+        ">
+            <div class="
+                relative
+                mx-auto
+                max-w-[1065px]
+                min-h-[630px]
+                w-full
+                sm:w-[73.96%]
+            ">
+                <div class="
+                    bg-white
+                    text-center
+                    py-[28.77%]
+                    px-0
+                    w-full
+                    sm:absolute
+                    sm:py-[10.72%]
+                    sm:w-[56%]
+                    sm:top-1/2
+                    sm:left-1/2
+                    sm:translate-x-[-50%]
+                    sm:translate-y-[-50%]
+                    sm:z-[2]
+                ">
+                    <h1 class="
+                        mb-4
+                        font-normal
+                        sm:font-medium
+                        text-7xl
+                        sm:text-8xl
+                        font-['Playfair']
+                    ">Mod Studio</h1>
+                    <h2 class="
+                        font-medium
+                        font-['Roboto']
+                        text-lg
+                        sm:text-xl
+                    ">Modern Web Studio</h2>
                 </div>
-                <div class="hero__img"></div>
+                <div class="
+                    bg-[url('/assets/img/inside-weather.jpg')]
+                    bg-left
+                    bg-no-repeat
+                    bg-cover
+                    w-full
+                    min-h-[420px]
+                    sm:min-h-[630px]
+                "></div>
             </div>
         </section>
 
