--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                 <div class="biography__text">
                     <h3 class="biography__text-title title_big">Katya <br>Mills</h3>
                     <ul class="biography__text-list">
-                        <li class="biography__text-list_item">Art Director<br></li>
+                        <li class="biography__text-list_item">Art Director</li><br>
                         <li class="biography__text-list_item">Scenography</li>
                         <li class="biography__text-list_item">Styling</li>
                         <li class="biography__text-list_item">Creative Photography</li>
