Set loading=lazy to images.

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <div class="biography__wrapper">
                 <picture class="biography__img">
                     <source media="(max-width:550px)" srcset="./assets/img/katya_mills_full_450.jpg">
-                    <img src="./assets/img/katya_mills_full.jpg" alt="katya mills photo" style="width: 100%;">
+                    <img src="./assets/img/katya_mills_full.jpg" loading="lazy" alt="katya mills photo" style="width: 100%;">
                 </picture>
 
                 <h2 class="biography__title title_small">Biography</h2>
@@ -59,7 +59,7 @@
                 <h2 class="designers__title title_small">Designers</h2>
 
                 <div class="designers__card designers__card-main">
-                    <img class="designers__card-photo" src="./assets/img/spurwing-agency.jpg" alt="image">
+                    <img class="designers__card-photo" src="./assets/img/spurwing-agency.jpg" loading="lazy" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Jess Wonder</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="designers__card">
-                    <img class="designers__card-photo" src="./assets/img/stil.jpg" alt="image">
+                    <img class="designers__card-photo" src="./assets/img/stil.jpg" loading="lazy" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Kameron Clein</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="designers__card">
-                    <img class="designers__card-photo" src="./assets/img/stil2.jpg" alt="image">
+                    <img class="designers__card-photo" src="./assets/img/stil2.jpg" loading="lazy" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Louisse Red</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -103,13 +103,13 @@
                 <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
             </div>
 
-            <img class="testimonials__img" src="./assets/img/keghan-crossland.jpg" alt="testimonials image 1">
+            <img class="testimonials__img" src="./assets/img/keghan-crossland.jpg" loading="lazy" alt="testimonials image 1">
 
             <div class="testimonials__paragraph">
                 <p class="testimonials__paragraph-text">I just really want to do good work and work with some great people, people who challenge me.</p>
                 <picture class="testimonials__paragraph-img">
                     <source media="(max-width:550px)" srcset="./assets/img/sinitta-leunen-450.jpg">
-                    <img src="./assets/img/sinitta-leunen-full.jpg" alt="testimonials image 2" style="width: 100%;">
+                    <img src="./assets/img/sinitta-leunen-full.jpg" loading="lazy" alt="testimonials image 2" style="width: 100%;">
                 </picture>
             </div>
         </section>
@@ -117,8 +117,8 @@
         <section id="strongPoints" class="strong-points">
             <h2 class="strong-points__title title_small">Strong points</h2>
 
-            <img class="strong-points__img" src="./assets/img/dawid-liberadzki.jpg" alt="image">
-            <img class="strong-points__img" src="./assets/img/avery-klein.jpg" alt="image">
+            <img class="strong-points__img" src="./assets/img/dawid-liberadzki.jpg" loading="lazy" alt="image">
+            <img class="strong-points__img" src="./assets/img/avery-klein.jpg" loading="lazy" alt="image">
 
             <div class="strong-points__list-wrapper">
                 <h3 class="strong-points__list-title title_big">Strengths</h3>
@@ -137,7 +137,7 @@
                     <li class="strong-points__list-item">Creativity</li>
                 </ul>
             </div>
-            <img class="strong-points__img" src="./assets/img/avery-klein.jpg" alt="image">
+            <img class="strong-points__img" src="./assets/img/avery-klein.jpg" loading="lazy" alt="image">
         </section>
     </main>
 </body>
