--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Put your description here.">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="preconnect">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X10R1F96B4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X10R1F96B4');
+</script>
 <body>
     <nav>
         <button class="nav__menu-btn" type="button">
-            <img src="./assets/icons/Menuburger.svg" alt="site menu">
+            <img width="34" height="16" src="./assets/icons/Menuburger.svg" alt="site menu">
         </button>
 
         <div class="nav__list">
@@ -35,8 +45,8 @@
         <section id="biography" class="biography">
             <div class="biography__wrapper">
                 <picture class="biography__img">
-                    <source media="(max-width:550px)" srcset="./assets/img/katya_mills_full_450.jpg">
-                    <img src="./assets/img/katya_mills_full.jpg" loading="lazy" alt="katya mills photo" style="width: 100%;">
+                    <source media="(max-width:550px)" srcset="./assets/img/katya_mills_full_450.webp">
+                    <img src="./assets/img/katya_mills_full.webp" loading="lazy" alt="katya mills photo" style="width: 100%;">
                 </picture>
 
                 <h2 class="biography__title title_small">Biography</h2>
@@ -59,7 +69,7 @@
                 <h2 class="designers__title title_small">Designers</h2>
 
                 <div class="designers__card designers__card-main">
-                    <img class="designers__card-photo" src="./assets/img/spurwing-agency.jpg" loading="lazy" alt="image">
+                    <img class="designers__card-photo" src="./assets/img/spurwing-agency.webp" loading="lazy" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Jess Wonder</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -68,7 +78,7 @@
                 </div>
 
                 <div class="designers__card">
-                    <img class="designers__card-photo" src="./assets/img/stil.jpg" loading="lazy" alt="image">
+                    <img class="designers__card-photo" src="./assets/img/stil.webp" loading="lazy" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Kameron Clein</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -77,7 +87,7 @@
                 </div>
 
                 <div class="designers__card">
-                    <img class="designers__card-photo" src="./assets/img/stil2.jpg" loading="lazy" alt="image">
+                    <img class="designers__card-photo" src="./assets/img/stil2.webp" loading="lazy" alt="image">
                     <div class="designers__card-description">
                         <h3 class="designers__card-title">Louisse Red</h3>
                         <div><strong>From/</strong>&nbsp;Be more flower</div>
@@ -103,13 +113,13 @@
                 <a class="testimonials__link-a" href="https://www.whitepapers.com">www.whitepapers.com</a>
             </div>
 
-            <img class="testimonials__img" src="./assets/img/keghan-crossland.jpg" loading="lazy" alt="testimonials image 1">
+            <img class="testimonials__img" src="./assets/img/keghan-crossland.webp" loading="lazy" alt="testimonials image 1">
 
             <div class="testimonials__paragraph">
                 <p class="testimonials__paragraph-text">I just really want to do good work and work with some great people, people who challenge me.</p>
                 <picture class="testimonials__paragraph-img">
-                    <source media="(max-width:550px)" srcset="./assets/img/sinitta-leunen-450.jpg">
-                    <img src="./assets/img/sinitta-leunen-full.jpg" loading="lazy" alt="testimonials image 2" style="width: 100%;">
+                    <source media="(max-width:550px)" srcset="./assets/img/sinitta-leunen-450.webp">
+                    <img src="./assets/img/sinitta-leunen-full.webp" loading="lazy" alt="testimonials image 2" style="width: 100%;">
                 </picture>
             </div>
         </section>
@@ -117,8 +127,8 @@
         <section id="strongPoints" class="strong-points">
             <h2 class="strong-points__title title_small">Strong points</h2>
 
-            <img class="strong-points__img" src="./assets/img/dawid-liberadzki.jpg" loading="lazy" alt="image">
-            <img class="strong-points__img" src="./assets/img/avery-klein.jpg" loading="lazy" alt="image">
+            <img class="strong-points__img" src="./assets/img/dawid-liberadzki.webp" loading="lazy" alt="image">
+            <img class="strong-points__img" src="./assets/img/avery-klein.webp" loading="lazy" alt="image">
 
             <div class="strong-points__list-wrapper">
                 <h3 class="strong-points__list-title title_big">Strengths</h3>
@@ -137,7 +147,7 @@
                     <li class="strong-points__list-item">Creativity</li>
                 </ul>
             </div>
-            <img class="strong-points__img" src="./assets/img/avery-klein.jpg" loading="lazy" alt="image">
+            <img class="strong-points__img" src="./assets/img/avery-klein.webp" loading="lazy" alt="image">
         </section>
     </main>
 </body>
